--- a/docs/0.0.43.md
+++ b/docs/0.0.43.md
@@ -34,3 +34,7 @@ lastSeen parameters in the status field of the target got removed, since it led 
 ## concurrency of the reconcilers
 
 set to 16
+
+## schema watch for targetdatastore reconciler
+
+The targetdatastore reconciler also watches schemas and retriggers the reconciler on changes
