--- a/docs/0.0.43.md
+++ b/docs/0.0.43.md
@@ -10,6 +10,13 @@ Changed the reconcilers to server-side apply logic (more ribust way to handle k8
 
 Now we have a dedicated reconciler that watches the status of the target every 5 min iso a go routine. Ensure more robust availability of the informer cache. This resulted in a 4th individual condition.
 
+deployment artifact got this new option to enable the new reconciler
+
+```yaml
+    - name: ENABLE_TARGET
+      value: "true"
+```
+
 ## targetConnectionProfile, targetSyncProfile
 
 Changed omitempty to pointer values, such that they don't point to defaults. e,g. encoding is not relevant for netconf and right now there is a default which does not make sense.
