--- a/docs/0.0.45.md
+++ b/docs/0.0.45.md
@@ -14,3 +14,6 @@ align go mod with latest updats
 
 required for buld deletion
 
+## target deletion -> config status update
+
+When a target got deleted, the status of the config CR was not updated. FIX
