--- a/docs/0.0.46.md
+++ b/docs/0.0.46.md
@@ -10,3 +10,6 @@ resource from the aggregated api server were not prefixed with the kind/group an
 
 in the table output we now include the priority
 
+## added network policy
+
+most cluster dont allow network traffic between namespaces, added a network policy to our artifacts
