updated rn for gnmi discovery

--- a/docs/0.0.47.md
+++ b/docs/0.0.47.md
@@ -2,6 +2,73 @@
 
 [ChangeLog](https://github.com/sdcio/config-server/releases)
 
-## gnmi discovery for arista
+## data driven gnmi discovery
 
-added gnmi discovery for arista eos
+To get flexibility and add different vendors w/o having to update the code, config-server now supports a data driven approach for discovery.
+
+New CRD: DiscoveryVendorProfile
+
+How does gnmi discovery work?
+
+- First gnmi capabilities is send
+    - the organization in the models is used to discover the vendor
+    - if multiple NOS(es) are supported by the vendor we use the modelMatch to distinguish these NOS(es)
+- Once the NOS is identified we use the paths in the DiscoveryVendorProfile to find additional details
+    - version
+    - macAddress
+    - serialNumber
+    - platform
+
+The parameters can be parsed using regex or starlark functions
+
+if discovery succeeded the target CR is reflecting the parameters that were discovered. The version is now also exposed in the target.
+
+Example DiscoveryVendorProfile(s)
+The name of the profile is the provider name, that should match the schema provider.
+
+```yaml
+apiVersion: inv.sdcio.dev/v1alpha1
+kind: DiscoveryVendorProfile
+metadata:
+  name: srl.nokia.sdcio.dev
+  namespace: default
+spec:
+  gnmi:
+    organization: Nokia
+    modelMatch: nokia.com:srlinux
+    paths:
+    - key: version
+      path: platform/control[slot=A]/software-version
+      regex: ^v?(\d+\.\d+\.\d+)
+    - key: platform
+      path: platform/chassis/type
+    - key: hostname
+      path: system/name/host-name
+    - key: serialNumber
+      path: platform/chassis/serial-number
+    - key: macAddress
+      path: platform/chassis/hw-mac-address
+      
+```
+
+```yaml
+apiVersion: inv.sdcio.dev/v1alpha1
+kind: DiscoveryVendorProfile
+metadata:
+  name: eos.arista.sdcio.dev
+  namespace: default
+spec:
+  gnmi:
+    organization: Arista Networks
+    paths:
+    - key: version
+      path: components/component[name=EOS]/state/software-version
+    - key: platform
+      path: components/component[name=Chassis]/state/part-no
+    - key: hostname
+      path: system/state/hostname
+    - key: serialNumber
+      path: components/component[name=Chassis]/state/serial-no
+    - key: macAddress
+      path: lldp/state/chassis-id
+```
