updated rn docs and examples

--- a/docs/0.0.47.md
+++ b/docs/0.0.47.md
@@ -72,3 +72,17 @@ spec:
     - key: macAddress
       path: lldp/state/chassis-id
 ```
+
+## config and config set lifecycle
+
+added lifecycle - deletionPolicy - orphan: a delete with this set does not delete the config from the target
+
+## internal: use transaction RPC iso
+
+- improved warnings, errors
+- retry logic based on aborted and resource exhuasted (seen as recoverable errors)
+
+## schema reload upon pod restart
+
+The schema reconciler will reload the schema in the schema server if the schema status is not ready
+
