--- a/docs/0.0.47.md
+++ b/docs/0.0.47.md
@@ -75,7 +75,7 @@ spec:
 
 ## config and config set lifecycle
 
-added lifecycle - deletionPolicy - orphan: a delete with this set does not delete the config from the target
+added lifecycle - deletionPolicy - orphan: when declaring a manifest with this configuration a delete of a config/config set CR will not delete the config on the target.
 
 ## internal: use transaction RPC iso
 
@@ -84,5 +84,5 @@ added lifecycle - deletionPolicy - orphan: a delete with this set does not delet
 
 ## schema reload upon pod restart
 
-The schema reconciler will reload the schema in the schema server if the schema status is not ready
+The schema reconciler will reload the schema in the schema server if the schema status is not ready.
 
