added flag to enable pprof

--- a/docs/0.0.49.md
+++ b/docs/0.0.49.md
@@ -9,7 +9,14 @@ Enabled pprof by default
 ```
 kubectl port-forward pod/<pod> -n network-system 8081:8081
 
-curl -s "http://127.0.0.1:8081/debug/pprof/profile" > ./cpu-profile.out
+curl -s "http://127.0.0.1:8081/debug/pprof/profile" > test/cpu-profile.out
+curl -s "http://127.0.0.1:8081/debug/pprof/heap" > test/heap-profile.out
 
-go tool pprof -http=:8080 ./cpu-profile.out
+go tool pprof -http=:8080 test/cpu-profile.out
+
+go tool pprof -top heap-profile.out
+go tool pprof -http=:8080 test/heap-profile.out
+
+go tool pprof http://127.0.0.1:8081/debug/pprof/heap
+
 ```
