--- a/docs/0.0.49.md
+++ b/docs/0.0.49.md
@@ -14,7 +14,7 @@ curl -s "http://127.0.0.1:8081/debug/pprof/heap" > test/heap-profile.out
 
 go tool pprof -http=:8080 test/cpu-profile.out
 
-go tool pprof -top heap-profile.out
+go tool pprof -top test/heap-profile.out
 go tool pprof -http=:8080 test/heap-profile.out
 
 go tool pprof http://127.0.0.1:8081/debug/pprof/heap
