--- a/docs/0.0.49.md
+++ b/docs/0.0.49.md
@@ -4,7 +4,10 @@
 
 ## enable profiling
 
-Enabled pprof by default
+Enabled pprof through a flag
+
+        - name: PPROF_PORT
+          value: "8081"
 
 ```
 kubectl port-forward pod/<pod> -n network-system 8081:8081
