--- a/docs/0.0.50.md
+++ b/docs/0.0.50.md
@@ -10,3 +10,10 @@ Deviations were not cleared when no notifications were send from the dataserver 
 
 Upon dataserver restart, the grpc connections to the schemaserver and dataserver are reestablished
 
+## fix targets reporting in configset
+
+The derived targets did not get reported properly in a confgiset -> fixed
+
+## server side apply rework
+
+reworked server side apply for some race conditions
