--- a/docs/0.0.53.md
+++ b/docs/0.0.53.md
@@ -13,3 +13,7 @@ behavior in non revertive mode
 - Accept deviation: default
 - Deny the full deviation: -> delete deviation-CR. (config-server reapply the config-CR w/o the related deviation CR)
 - Deny a piece of the deviation -> delete that part of the deviation-CR (config-server reapply the config CR w the updated deviation CR)
+
+## transact per target
+
+we now aggregate all changes related to a target in 1 transaction
